--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@internationalized/date": "^3.7.0",
     "@prisma/client": "^6.3.1",
     "next": "15.1.7",
     "react": "^19.0.0",
