--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@prisma/client": "^6.3.1",
     "@react-aria/i18n": "^3.12.5",
     "next": "15.1.7",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
