--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,10 @@ jobs:
           node-version: '22.2.0'  # Specify the Node.js version you are using  
   
       - name: Install dependencies  
-        run: npm install  
+        run: npm install
+      
+      - name: Generate Prisma Client  
+        run: npx prisma generate 
   
       - name: Build the project  
         env:  
