fix: deploy migrations in procfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
       - name: Generate Prisma Client  
         run: npx prisma generate
 
-      - name: Run Prisma migrations  
-        env:  
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}  
-        run: npx prisma migrate deploy  
+      # - name: Run Prisma migrations  
+      #   env:  
+      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}  
+      #   run: npx prisma migrate deploy  
   
       - name: Build the project  
         env:  
