--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,12 @@ jobs:
       - name: Generate Prisma Client  
         run: npx prisma generate
 
-      # - name: Run Prisma migrations  
-      #   env:  
-      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}  
-      #   run: npx prisma migrate deploy  
-  
       - name: Build the project  
         env:  
           DATABASE_URL: ${{ secrets.DATABASE_URL }}  
+          AUTH_GOOGLE_ID: ${{ secrets.AUTH_GOOGLE_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
         run: npm run build
       
       - uses: actions/checkout@v2
