--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@internationalized/date": "^3.7.0",
     "@prisma/client": "^6.3.1",
     "@react-aria/i18n": "^3.12.5",
-    "next": "15.1.7",
+    "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
